# youtube-downloader-webui

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: clear_temp.py  config.py  get_video.py  scrapetube.py  utils.py
static/: index.js  style.css
templates/: index.html
tests/: readme.md  test_get_video.py
