[project]
name = "20251130-pytube-web-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "orjson>=3.11.4",
    "pytubefix>=10.3.5",
    "scrapetube>=2.6.0",
    "uvicorn>=0.38.0",
]
